add var to env, changed logo verification

--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -144,7 +144,7 @@
           <ul id="menu">
             <li>
               <a class="translated-text" href="#leader" key="leader"
-                >пробiотик "1"</a
+                >Одне рішення</a
               >
             </li>
             <li>
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div class="desctop-navigation">
-        <a class="translated-text" href="#leader" key="leader">пробiотик "1"</a>
+        <a class="translated-text" href="#leader" key="leader">Одне рішення</a>
         <a class="translated-text" href="#acting" key="acting">як діє</a>
         <a class="translated-text" href="#reception" key="reception"
           >спосiб застосування</a
@@ -368,7 +368,7 @@
     <div class="application">
       <h3 class="translated-text" key="application-text">
         СИТУАЦІЇ РІЗНІ – РІШЕННЯ ОДНЕ<br /><span
-          >АКТИВ АКТИВ ФЛОРА <small>бебі</small></span
+          >АКТИВ ФЛОРА <small>бебі</small></span
         >
       </h3>
 <!--      <div class="fixed">-->
@@ -695,6 +695,7 @@
     </div>
 
     <div class="disclamer">
+      <h4>Доказова база</h4>
       <ol>
         <li class="translated-text" key="disclamer-text-one">
           WGO Global Guideline Probiotics and prebiotics, 2017
@@ -707,16 +708,16 @@
         </li>
       </ol>
       <p class="translated-text" key="disclamer-text">
-        На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці. 
+        На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці.</p>
 
-Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.  
+<p>Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.</p>
 
-Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com» <br>
-Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. 
+<p>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com»</p>
+<p>Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03.</p>
 
-Виробник: Komarko Sp. z o. o. (Польща). 
+<p>Виробник: Komarko Sp. z o. o. (Польща). </p>
 
-Постачальник:  Альпен Фарма АГ (Швейцарія). 
+<p>Постачальник:  Альпен Фарма АГ (Швейцарія). </p>
       </p>
     </div>
 
