add var to env, changed logo verification

--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -695,7 +695,7 @@
     </div>
 
     <div class="disclamer">
-      <h4>Доказова база</h4>
+      <h4  class="translated-text" key="disclamer-text-zero">Доказова база</h4>
       <ol>
         <li class="translated-text" key="disclamer-text-one">
           WGO Global Guideline Probiotics and prebiotics, 2017
