add var to env, changed logo verification

--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -703,7 +703,7 @@
         <li class="translated-text" key="disclamer-text-two">
           PharmXplorer 12.2020 
         </li>
-        <li class="translated-text" key="disclamer-text-two">
+        <li class="translated-text" key="disclamer-text-last">
           L'olio extravergine oliva e' simile al latte materno - Alimentazione - Salute e Benessere - ANSA.it
         </li>
       </ol>
