--- a/Owey/hsystem.html
+++ b/Owey/hsystem.html
@@ -23,7 +23,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="./index.html"></a>
-            <!-- <a class="where-to-buy-mob" href="#block-6">ДЕ КУПИТИ</a> -->
+            <a class="where-to-buy-mob" href="#sticker">СТАТИ ПАРТНЕРОМ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="./hcolor.html" >Фарбування</a>
                 <a class="navmenu active" href="./hsystem.html">Hsystem</a>
@@ -35,7 +35,7 @@
                 <a class="navmenu" href="./accessories.html">Аксесуари</a>
                 <a class="navmenu" href="./manifest.html">Про нас</a>
 
-                <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
+                <a class=" where-to-buy" href="#sticker">СТАТИ ПАРТНЕРОМ</a>
                 <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>/  RU</p></a>
             </div>
 
@@ -75,9 +75,9 @@
                         <li>
                             <a class="navmenu menuLi" href="./manifest.html">Про нас</a>
                         </li>
-<!--                        <li>-->
-<!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
-<!--                        </li>-->
+<li>
+                            <a class=" where-to-buy" href="#sticker">СТАТИ ПАРТНЕРОМ</a>
+                        </li>
                         <li>
                             <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
                         </li>
