--- a/Owey/index.html
+++ b/Owey/index.html
@@ -141,9 +141,9 @@
         <p>СТАТИ ПАРТНЕРОМ</p>
     </a> -->
 
-<div class="static-main-img static-main-img_main">
+<!-- <div class="static-main-img static-main-img_main">
     <h2><b>OWAY</b> — запорука здорового волосся та шкіри твоєї голови</h2>
-</div>
+</div> -->
 
 
 
