--- a/Owey/index.html
+++ b/Owey/index.html
@@ -137,9 +137,9 @@
 <!--//////////slider-->
 
 
-<!--     <a class="stiker" href="#sticker">
+    <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </a> -->
+    </a>
 
 <!-- <div class="static-main-img static-main-img_main">
     <h2><b>OWAY</b> — запорука здорового волосся та шкіри твоєї голови</h2>
