--- a/Owey/manifest.html
+++ b/Owey/manifest.html
@@ -35,7 +35,7 @@
                 <a class="navmenu" href="./accessories.html">Аксесуари</a>
                 <a class="navmenu active" href="./manifest.html">Про нас</a>
 
-                <a class=" where-to-buy" href="#sticker">СТАТИ ПАРТНЕРОМ</a>
+                <a class=" where-to-buy" href="https://beautytown.com.ua/ru/brand/8-oway">Де купити</a>
                 <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>/  RU</p></a>
             </div>
 
@@ -76,7 +76,7 @@
                             <a class="navmenu menuLi" href="./manifest.html">Про нас</a>
                         </li>
 <li>
-                            <a class=" where-to-buy" href="#sticker">СТАТИ ПАРТНЕРОМ</a>
+                            <a class=" where-to-buy" href="https://beautytown.com.ua/ru/brand/8-oway">Де купити</a>
                         </li>
                         <li>
                             <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
