--- a/Cinnabsin-LT/index.html
+++ b/Cinnabsin-LT/index.html
@@ -44,7 +44,7 @@
   background: url("./images/icon_06_apteki_MD.jpg") no-repeat center / contain;
 }
 .apt-container a:nth-child(3) {
-  background: url("./images/icon_01_apteki_MD.jpg") no-repeat center / contain;
+  background: url("./images/benu-logo.svg") no-repeat center / contain;
 }
 .apt-container a:nth-child(4) {
   background: url("./images/icon_04_apteki_LT.jpg") no-repeat center / contain;
@@ -394,11 +394,11 @@ sup {font-size:xx-small; vertical-align:super;}
 <div class="header-container" style="">
     <div style="position: relative; display: flex; max-width: 1200px; margin: auto;" class="media">
         <div class="pack" style="">
-            <a target="_blank" href="./info.pdf" style="text-decoration: none; color: black; position: absolute; top: 100%; left: 30%; padding: 10px 30px; background-color: #f5e41e; border-radius: 12px; font-family: sans-serif;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)" >instruction</a>
+            <a target="_blank" href="./info.pdf" style="text-decoration: none; color: black; position: absolute; top: 100%; left: 30%; padding: 10px 30px; background-color: #f5e41e; border-radius: 12px; font-family: sans-serif;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)" >Vaisto aprašymas</a>
 
         </div>
         <div class="shma" style=""></div>
-        <h1 class="main-text" style="" >Sloga? sinusitas?<br>Cinnabsin N išlaisvins nuo slogos ir sinusito!</h1>
+        <h1 class="main-text" style="" >Sloga? Sinusitas?<br>Cinnabsin N išlaisvins nuo slogos ir sinusito!</h1>
         <ul class="main-text_ul" style="">
             <li style="margin-bottom: 20px;">Pašalina nosies užgulimą ir galvos skausmą esant slogai ir sinusitui</li>
             <li style="margin-bottom: 20px;">Normalizuoja natūralų nosies gleivinės ir sinusų valymąsi</li>
@@ -611,7 +611,7 @@ iki 4 tablečių per dieną), kol pagerėja savijauta.
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/12.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Suaugusiesiems ir paaugliams nuo 12 metų: </strong>
                 <p style="font-family: sans-serif;text-align: center;height: 115px;">
-                    Ūminės ligos metu vartoti po 1 tabletę kas pusvalandį arba valandą (iki 6 tablečių per dieną), kol pagerėja savijauta. 
+                    ūminės ligos metu vartoti po 1 tabletę kas pusvalandį arba valandą (iki 6 tablečių per dieną), kol pagerėja savijauta. 
                 </p>
                 <amp-accordion class="accordion" animate>
 
@@ -665,7 +665,7 @@ iki 4 tablečių per dieną), kol pagerėja savijauta.
 <div class="apt-container">
                   <a target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
                   <a target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
-                  <a target="_blank" href="https://www.benu.lt/visos-prekes?vars/brand/cinnabsin"></a>
+                  <a target="_blank" href="https://www.benu.lt/medicina-ir-gydymas/persalimui-ir-gripui/nuo-slogos/cinnabsin-n-25-mg25-mg25-mg25-mg-tabletes-n40"></a>
                   <a target="_blank" href="https://www.eurovaistine.lt/cinnabsin-n-tabletes-n40"></a>
                   <a target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/cinnabsin-n-tab-n40"></a>
                 </div>
