--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 			<a href="Cinnabsin-LT/index.html">Cinnabsin-LT</a>
 			<a href="Cinnabsin-MD/index.html">Cinnabsin-MD</a>
 			<a href="Owey/index.html">Oway</a>
+			<a href="Klimaktoplan-LT/index.html">Klimaktoplan-lt</a>
 		</section>
 	</main>
 
@@ -267,6 +268,9 @@
 	}
 	a:nth-child(56)::before {
 		background: url("./Owey/bg.jpg")no-repeat center / contain;
+	}
+	a:nth-child(57)::before {
+		background: url("./Klimaktoplan-LT/bg.jpg")no-repeat center / contain;
 	}
 </style>
 
