--- a/Klimaktoplan-LT/index.html
+++ b/Klimaktoplan-LT/index.html
@@ -53,7 +53,7 @@
       <div class="pack-block"></div>
     </div>
   </div>
-  <div class="header-container__new-woman header-container__new-woman-kz"></div>
+  <div class="header-container__new-woman"></div>
   
   <div class="mobile__top-block"></div>
   <div class="mobile__new-woman"></div>
