--- a/Cinnabsin-MD/index.html
+++ b/Cinnabsin-MD/index.html
@@ -354,9 +354,9 @@
 
         </div>
         <div class="shma" style=""></div>
-        <h1 class="main-text" style="" >Rinită? Sinuzită? <br>Cinnabsin te eliberează de secrețiile nazale</h1>
+        <h1 class="main-text" style="" >Rinită? Sinusită? <br>Cinnabsin te eliberează de secrețiile nazale</h1>
         <ul class="main-text_ul" style="">
-            <li style="margin-bottom: 20px;">Elimină congestia nazală și durerile de cap cauzate de sinuzită</li>
+            <li style="margin-bottom: 20px;">Elimină congestia nazală și durerile de cap cauzate de sinusită</li>
             <li style="margin-bottom: 20px;">Stimulează curățarea naturală a mucoasei nazale și a sinusurilor paranazale</li>
             <li style="margin-bottom: 20px;">Accelerează recuperarea și previne apariția bolilor </li>
         </ul>
@@ -365,7 +365,7 @@
 <div class="res-top" style="">
     <div style="position: relative; display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto;" class="media-wrap">
         <div class="plate-el" style="height: 114px; width: 114px; background-image: url('./images/de.png'); background-position: center;background-size: cover; background-repeat: no-repeat;">
-            <p style="position:relative;top: 120px; font-size: 16px;text-align: center; font-family: sans-serif;">Produs <br>în Germania</p>
+            <p style="position:relative;top: 120px; font-size: 16px;text-align: center; font-family: sans-serif;">Produs <br>în German</p>
         </div>
         <div class="plate-el" style=" height: 114px; width: 114px; background-image: url('./images/60.png'); background-position: center;background-size: cover; background-repeat: no-repeat;">
             <p style="position:relative;top: 120px; font-size: 16px;text-align: center; font-family: sans-serif;">60 de ani de încredere </p>
@@ -409,11 +409,11 @@
     <div class="mob-column" style="display: flex; justify-content: space-around; max-width: 1200px; margin: auto;">
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
             <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Acțiune antiedematoasă<sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">Restabilește respirația nazală prin reducerea umflării mucoasei nazale și a sinusurilor paranazale.</p>
+            <p style="line-height: 25px; font-family: sans-serif;">Restabilește respirația nazală prin reducerea edemului mucoasei nazale și a sinusurilor paranazale.</p>
         </div>
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
             <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Acțiune secretolitică<sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">Lichefiază secrețiile nazale groase și facilitează eliminarea acesteia.</p>
+            <p style="line-height: 25px; font-family: sans-serif;">Lichefiază secrețiile nazale dense și facilitează eliminarea acesteia.</p>
         </div>
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
             <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Normalizează activitatea epiteliului ciliat<sup>3</sup></p>
@@ -421,7 +421,7 @@
         </div>
         <div class="text-el" style="  padding-right: 20px;">
             <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Acțiune imunomodulatoare<sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">Stimulează puterile de apărare ale organismului, ceea ce accelerează recuperarea și împiedică tranziția unui proces acut într-unul cronic</p>
+            <p style="line-height: 25px; font-family: sans-serif;">Stimulează apararea organismului, ceea ce accelerează recuperarea și împiedică tranziția unui proces acut într-unul cronic</p>
         </div>
 
     </div>
@@ -432,7 +432,7 @@
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div class="paz-text" style="">
             <strong style="color: #e98300; font-family: sans-serif; font-weight: bolder;">Cum funcționează Cinnabisin</strong>
-            <p style="font-family: sans-serif;">Principala caracteristică a Cinnabsin este spectrul  său larg  de acțiune. Și acest lucru îl deosebește în mod favorabil de picăturile vasoconstrictoare, care restabilesc doar respirația nazală, provocând în același timp uscarea mucoasei nazale, deoarece acestea reduc aportul de sânge, perturbă transportul mucociliar - un mecanism natural pentru curățarea sinusurilor și mucoasei nazale. Cinnabsin restabilește respirația nazală, ameliorând umflarea mucoasei nazale și a sinusurilor paranazale (datorită acțiunii antiinflamatoare și antiedematoase), lichefiază mucusul gros, facilitează trecerea acestuia, normalizând mecanismul natural de curățare a mucoasei nazale și a sinusurilor paranazale.<sup>2</sup> 
+            <p style="font-family: sans-serif;">Principala caracteristică medicamenlui Cinnabsin este spectrul  său larg  de acțiune. Acest fapt îl deosebește în mod favorabil de picăturile vasoconstrictoare, care doar restabilesc doar respirația nazală, provocând în același timp uscarea mucoasei nazale, reduc aportul de sânge, dereglează transportul mucociliar - un mecanism natural pentru curățarea sinusurilor și mucoasei nazale. Cinnabsin restabilește respirația nazală, ameliorând înflamația și edemul mucoasei nazale și a sinusurilor paranazale (datorită acțiunii antiinflamatoare și antiedematoase), lichefiază mucusul vîscos, facilitează eliminarea acestuia, normalizând mecanismul natural de curățare a mucoasei nazale și a sinusurilor paranazale.<sup>2</sup> 
             <p style="font-family: sans-serif;">
                             Un alt avantaj important al Cinnabsin este capacitatea sa de a crește propriile mijloace de apărare ale organismului, care accelerează recuperarea și previne apariția bolilor. Cu Cinnabsin, nasul este liber! 
                         </p>
@@ -475,7 +475,7 @@
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/26.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Copii de la 2 la 5 ani: </strong>
                 <p style="font-family: sans-serif;text-align: center;height: 115px;">
-                    în condiții acute - dizolvați 1 comprimat de 3 ori pe zi până când starea se ameliorează. Cu un tratament suplimentar, continuați să luați 1 comprimat de 3 ori pe zi. 
+                    în afecțiuni acute - dizolvați 1 comprimat de 3 ori pe zi până când starea se ameliorează. În stări cronice, continuați să luați 1 comprimat de 3 ori pe zi. 
                 </p>
                 <amp-accordion class="accordion" animate>
 
@@ -517,7 +517,7 @@
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/611.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Copii cu vârste cuprinse între 6 şi 11 ani </strong>
                 <p style="font-family: sans-serif;text-align: center;height: 115px;">
-                    În condiții acute - dizolvați 1 comprimat la fiecare 2 ore (dar nu mai mult de 6 comprimate pe zi) până când starea se ameliorează. Cu un tratament suplimentar, continuați să luați 1 comprimat de 3 ori pe zi. 
+                    În afecțiuni acute - dizolvați 1 comprimat la fiecare 2 ore (dar nu mai mult de 6 comprimate pe zi) până când starea se ameliorează. În stări cronice, continuați să luați 1 comprimat de 3 ori pe zi. 
                 </p>
                 <amp-accordion class="accordion" animate>
 
@@ -563,7 +563,7 @@
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/12.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Adulţi şi copii cu vârsta peste 12 ani: </strong>
                 <p style="font-family: sans-serif;text-align: center;height: 115px;">
-                    În condiții acute - dizolvați 1 comprimat la fiecare oră (dar nu mai mult de 12 comprimate pe zi) până când starea se ameliorează. Cu un tratament suplimentar, luați 1-2 comprimate de 3 ori pe zi. 
+                    În afecțiuni acute - dizolvați 1 comprimat la fiecare oră (dar nu mai mult de 12 comprimate pe zi) până când starea se ameliorează. În stări cronice, luați 1-2 comprimate de 3 ori pe zi. 
                 </p>
                 <amp-accordion class="accordion" animate>
 
@@ -625,7 +625,7 @@
 </div> -->
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
-        <p style="text-align: center; font-size: 28px;">Baza probatorie</p>
+        <p style="text-align: center; font-size: 28px;">Referințe</p>
         <p style="text-align: center; font-size: 28px;">
         </p>
         <p><!-- Baza probatorie --></p>
