--- a/Klimaktoplan-LT/index.html
+++ b/Klimaktoplan-LT/index.html
@@ -23,7 +23,7 @@
           <li><a class="translated-text navmenu" key="g4" href="#k4">Sastāvs</a></li>
           <!-- <li><a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a></li> -->
           <!-- <li><a class="translated-text navmenu" key="g4" href="faq.html">Вопросы</a></li> -->
-          <li><a class="translated-text buy-btn" key="g5" href="#k3">Kur nopirkt?</a></li>
+          <!-- <li><a class="translated-text buy-btn" key="g5" href="#k3">Kur nopirkt?</a></li> -->
 <!--           <li>
               <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index.html"><p>  LT</p></a>
           </li> -->
@@ -36,7 +36,7 @@
       <a class="translated-text navmenu" key="g4" href="#k4">Sastāvs</a>
       <!-- <a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a> -->
       <!-- <a class="translated-text navmenu faq" key="g4" href="faq.html"></a> -->
-      <a class="translated-text buy-btn" key="g5" href="#k3">Kur nopirkt?</a>
+      <!-- <a class="translated-text buy-btn" key="g5" href="#k3">Kur nopirkt?</a> -->
       <!-- <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index.html"><p>  LT</p></a> -->
     </div>
 <!--     <a class="instruction" href="./instruction.pdf"
@@ -152,12 +152,14 @@
 <div><a name="k3"></a></div>
 
  
-  <h3 class="fifth-h3">Zāles Klimaktoplan N Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
+<!--   <h3 class="fifth-h3">Zāles Klimaktoplan N Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
 <div class="fifth-container">
-  <a class="logo1" href="https://europharma.kz/klimaktoplan-n-no-100-tabl"></a>
-  <a class="logo2" href="http://www.sadykhan.kz/search/index/?query=%D0%9A%D0%BB%D0%B8%D0%BC%D0%B0%D0%BA%D1%82%D0%BE%D0%BF%D0%BB%D0%B0%D0%BD%20%E2%84%96100%20%D1%82%D0%B0%D0%B1%D0%BB."></a>
-  <a class="logo3" href="https://rauza-ade.kz/products?search_by=name&keyword=%D0%9A%D0%BB%D0%B8%D0%BC%D0%B0%D0%BA%D1%82%D0%BE%D0%BF%D0%BB%D0%B0%D0%BD+%D0%9D+%E2%84%96100+%D1%82%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BA%D0%B8"></a>
-</div>
+  <a class="logo1" target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a class="logo2" target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a class="logo3" target="_blank" href="https://www.benu.lt/medicina-ir-gydymas/persalimui-ir-gripui/nuo-slogos/cinnabsin-n-25-mg25-mg25-mg25-mg-tabletes-n40"></a>
+                  <a class="logo4" target="_blank" href="https://www.eurovaistine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a class="logo5" target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/cinnabsin-n-tab-n40"></a>
+</div> -->
 
 
   <div class="disclamer">
