--- a/Klimaktoplan-LT/index.html
+++ b/Klimaktoplan-LT/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Klimaktoplan N</title>
+    <title>Klimaktoplan</title>
     <meta name="description" content="Klimaktoplan" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/fav.png" type="image/png" />
@@ -62,7 +62,7 @@
 
 <div class="second-container" ><a name="k1"></a>
   <div class="second-container__text">
-    <h1>Klimaktoplan N</h1>
+    <h1>Klimaktoplan</h1>
     <p>LAI SAMAZINĀTU GALVENĀS KLIMAKSA IZPAUSMES</p>
     <div class="mobile__pack">
       <div class="mobile__pack-box"></div>
@@ -102,7 +102,7 @@
   <div class="third-container">
 
   <div class="third-container__plate-container">
-    <h3>Ārstēšanas ar Klimaktoplan N ieguvumi</h3>
+    <h3>Ārstēšanas ar Klimaktoplan ieguvumi</h3>
     <div class="third-container__plate">
       <div class="plate-img"></div>
       <p>Labi panesams <br>(tāpēc to var lietot <br>vismaz gadu)<sup>1</sup></p>
@@ -152,7 +152,7 @@
 <div><a name="k3"></a></div>
 
  
-<!--   <h3 class="fifth-h3">Zāles Klimaktoplan N Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
+<!--   <h3 class="fifth-h3">Zāles Klimaktoplan Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
 <div class="fifth-container">
   <a class="logo1" target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
                   <a class="logo2" target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
