--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			<a href="Cinnabsin-MD/index.html">Cinnabsin-MD</a>
 			<a href="Owey/index.html">Oway</a>
 			<a href="Klimaktoplan-LT/index.html">Klimaktoplan-lt</a>
+			<a href="Vitango-new/index.html">Vitango-new</a>
 		</section>
 	</main>
 
@@ -271,6 +272,9 @@
 	}
 	a:nth-child(57)::before {
 		background: url("./Klimaktoplan-LT/bg.jpg")no-repeat center / contain;
+	}
+	a:nth-child(58)::before {
+		background: url("./Vitango-new/bg.jpg")no-repeat center / contain;
 	}
 </style>
 
