--- a/Vitango-new/index.html
+++ b/Vitango-new/index.html
@@ -26,8 +26,8 @@
             <a class="where-to-buy-mob" href="#sticker">Де купити</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#1" >ПЕРЕВАГИ</a>
-                <a class="navmenu" href="#2">Склад та дія </a>
                 <a class="navmenu" href="#3">Як приймати </a>
+                <a class="navmenu" href="#2">Склад та дія </a>
                 <a class="navmenu" href="#4">Поради</a>
                 <a class=" where-to-buy" href="#5">Де купити</a>
                 <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
@@ -43,10 +43,10 @@
                             <a class="navmenu menuLi" href="#1" >ПЕРЕВАГИ</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#2">Склад та дія </a>
-                        </li>
-                        <li>
                             <a class="navmenu menuLi" href="#3">Як приймати </a>
+                        </li>
+                                                <li>
+                            <a class="navmenu menuLi" href="#2">Склад та дія </a>
                         </li>
                         <li>
                             <a class="navmenu menuLi" href="#4">Поради</a>
@@ -134,10 +134,10 @@
                     <p>зменшує вивільнення гормонів стресу</p>
                     <p>знижує напругу та дратівливість</p>
                     <p>збільшує індивідуальну стресостійкість</p>
-                    <p>зменшує фізичну  та розумову втому</p>
+                    <p>зменшує фізичну та розумову втому</p>
                 </div>
                 <div class="container3_list-block">
-                    <p>покращує здатність зосередитися</p>
+                    <p>покращує здатність зосередитися</p>
                     <p>нормалізує апетит</p>
                     <p>покращує настрій</p>
                     <p>натуральний склад</p>
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div class="container4">
-          <h2>Прагнете встигнути все на роботі? Сконцентруйтеся, не втрачайте жодної секунди!</h2>
+          <h2>Прагнете встигнути все на роботі? Сконцентруйтеся, не втрачайте жодної секунди!</h2>
       </div>
       <div class="container2-mob">
             <div class="container4-mob_img"></div>
@@ -162,15 +162,15 @@
           <div class="container5-plates">
               <div class="container5-plate">
                     <div class="container5-plate_img"></div>
-                  <p>1 таблетка двічі на день</p>
+                  <p>1 таблетка двічі на день</p>
               </div>
               <div class="container5-plate">
                 <div class="container5-plate_img"></div>
-                  <p>Зранку та в обід</p>
+                  <p>Зранку<br>та в обід</p>
               </div>
               <div class="container5-plate">
                   <div class="container5-plate_img"></div>
-                  <p>За 30 хвилин до прийому їжі </p>
+                  <p>За 30 хвилин<br>до прийому їжі </p>
 
               </div>
               <div class="container5-plate">
@@ -188,6 +188,7 @@
           <h2>Хочете мати більше часу з близькими? Керуйте своїм днем, або день керуватиме вами!</h2>
           <div class="container6-mob_main-img"></div>
       </div>
+      <a name='2'></a>
       <div class="container7">
         <div class="inner-container7">
           <h4>Природна сила Вітанго<sup>®</sup>?</h4>
@@ -201,7 +202,7 @@
       <div class="container8">
         <div class="inner-container8">
           <div class="container8-img"></div>
-          <h4>Як додати 25-ту годину або ефективне планування дня<sup>2</sup></h4>
+          <h4>Як додати 25-ту годину<br>або ефективне планування дня<sup>2</sup></h4>
           <div class="container8-plates">
               <div class="container8-plate">
                   <p class="container8-plate_title">Плануйте робочі завдання</p>
@@ -262,7 +263,7 @@
                   </div>
           </div>
         <p class="vita-disclamer">
-            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
+            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
         </p>
       </div>
   </div>
