--- a/Klimaktoplan-LT/index.html
+++ b/Klimaktoplan-LT/index.html
@@ -152,14 +152,11 @@
 <div><a name="k3"></a></div>
 
  
-<!--   <h3 class="fifth-h3">Zāles Klimaktoplan Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
+  <h3 class="fifth-h3">Zāles Klimaktoplan Jūs varat iegādāties savas pilsētas aptiekās vai tiešsaistes aptiekās:</h3>
 <div class="fifth-container">
-  <a class="logo1" target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
-                  <a class="logo2" target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
-                  <a class="logo3" target="_blank" href="https://www.benu.lt/medicina-ir-gydymas/persalimui-ir-gripui/nuo-slogos/cinnabsin-n-25-mg25-mg25-mg25-mg-tabletes-n40"></a>
-                  <a class="logo4" target="_blank" href="https://www.eurovaistine.lt/cinnabsin-n-tabletes-n40"></a>
-                  <a class="logo5" target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/cinnabsin-n-tab-n40"></a>
-</div> -->
+  <a class="logo1" target="_blank" href="https://www.apotheka.lv/klimaktoplan-tabletes-n100-pmm0133471lv"></a>
+    <a class="logo2" target="_blank" href="https://internetaptieka.lv/lv/seksuala-veseliba-un-urologija/klimaktoplan"></a>
+</div>
 
 
   <div class="disclamer">
