--- a/Vitango-new/index-ru.html
+++ b/Vitango-new/index-ru.html
@@ -79,7 +79,7 @@
         <div class="header-block_img">
         </div>
       </div>
-      <div class="container1">
+      <div class="container1  container1-ru">
           <div class="inner-container1">
               <p>ВАМ ЗНАКОМЫ ТАКИЕ СИМПТОМЫ СТРЕССА?</p>
               <div class="inner-container1_plates">
@@ -115,7 +115,7 @@
           </div>
 
       </div>
-      <div class="container2">
+      <div class="container2 container2-ru">
           <h2>Начните активно свое утро, чтобы зарядиться энергией на день!</h2>
       </div>
       <div class="container2-mob">
@@ -146,7 +146,7 @@
             </div>
         </div>
       </div>
-      <div class="container4">
+      <div class="container4 container4-ru">
           <h2>Стремитесь всё успеть на работе? Сконцентрируйтесь, не теряйте ни секунды!</h2>
       </div>
       <div class="container2-mob">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="container6">
+      <div class="container6 container6-ru">
           <h2>Хотите проводить больше времени с близкими? Управляйте своим днём, или день будет управлять вами!</h2>
       </div>
       <div class="container2-mob">
