--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 			<a href="Owey/index.html">Oway</a>
 			<a href="Klimaktoplan-LT/index.html">Klimaktoplan-lt</a>
 			<a href="Vitango-new/index.html">Vitango-new</a>
+			<a href="Cinnabsin-AZ/index.html">Cinnabsin-AZ</a>
 		</section>
 	</main>
 
@@ -275,6 +276,9 @@
 	}
 	a:nth-child(58)::before {
 		background: url("./Vitango-new/bg.jpg")no-repeat center / contain;
+	}
+	a:nth-child(59)::before {
+		background: url("./Cinnabsin-AZ/logo.svg")no-repeat center / contain;
 	}
 </style>
 
