--- a/Cinnabsin-AZ/index.html
+++ b/Cinnabsin-AZ/index.html
@@ -276,11 +276,11 @@
                     <li class="menu-li">
                         <a  href="#block-3" role="button">NECƏ QƏBUL ETMƏK</a>
                     </li>
-                    <li class="menu-li">
+<!--                     <li class="menu-li">
                         <a  href="#block-4" role="button">HARADAN ALMAQ</a>
-                    </li>
+                    </li> -->
                     <li class="menu-li">
-                        <a  href="./index-en.html" role="button">en</a>
+                        <a  href="./index-ru.html" role="button">ru</a>
                     </li>
                 </ul>
             </section>
@@ -332,11 +332,11 @@
             <li>
                 <a  href="#block-3" role="button">NECƏ QƏBUL ETMƏK</a>
             </li>
-            <li>
+<!--             <li>
                 <a  href="#block-4" role="button">HARADAN ALMAQ</a>
-            </li>
+            </li> -->
             <li style="    margin-right: 30px;border: 1px solid rgb(108, 117, 125); border-radius: 5px;padding: 5px;">
-                <a href="index-en.html" style="margin-right: 0;" role="button">en</a>
+                <a href="index-ru.html" style="margin-right: 0;" role="button">ru</a>
             </li>
         </ul>
     </nav>
@@ -436,7 +436,6 @@
 
 
 <!--             <amp-accordion class="accordion" animate>
-
                 <section>
                     <div style="width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none;" class="menu">Узнать больше</div>
                     <div>
@@ -447,10 +446,7 @@
                             Насморк, гайморит? SİNNABSİN! Дышите носом свободно!
                         </strong>
                     </div>
-
                 </section>
-
-
             </amp-accordion> -->
 
 
@@ -603,7 +599,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">HARADAN ALMAQ?</p>
+<!-- <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">HARADAN ALMAQ?</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
@@ -611,7 +607,7 @@
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
     </div>
-</div>
+</div> -->
 <div class="disc-mob-back" style="background-color: #f8f9fa;">
     <div style="display: flex; flex-direction: column;  max-width: 1200px; margin: auto; color: rgb(108,117,125);font-family: sans-serif;">
 <!--         <p style="text-align: center; font-size: 28px;">SİNNABSİN</p>
@@ -657,13 +653,3 @@
 </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
