--- a/Owey/styling.html
+++ b/Owey/styling.html
@@ -263,8 +263,8 @@
             <p>Email: nataliia.yeshenko@naturpharm.ua</p>
         </div>
         <div class="social">
-            <a class="facebook"></a>
-            <a class="insta"></a>
+            <a class="facebook" href="https://www.facebook.com/owayukraine/"></a>
+            <a class="insta" href="https://www.instagram.com/oway.ukraine/"></a>
         </div>
     </div>
     <div class='footer-blockmob'>
