--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -666,6 +666,9 @@
           The Variable Regions of Lactobacillus rhamnosus Genomes Reveal the Dynamic Evolution of Metabolic and Host-Adaptation Repertoires, Corina Ceapa, Mark Davids, Jarmo Ritari,Genome Biology and Evolution, 2016
         </li>
       </ol>
+    </div>
+    <div class="block-after">
+      <div class="block-after_inner">
       <p class="translated-text" key="disclamer-text">
         На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці.</p>
 
@@ -678,6 +681,10 @@
 
 <p class="translated-text" key="disclamer-text6">Постачальник:  Альпен Фарма АГ (Швейцарія). </p>
       </p>
+      </div>
+      <div>
+        
+      </div>
     </div>
 
     <script>
