--- a/Owey/men.html
+++ b/Owey/men.html
@@ -138,13 +138,13 @@
             <p><b>Гель-енергетик для душу</b> 240 мл</p>
         </div>
         <div class="plate_styling plate_men">
-            <p><b>Глей для волосся екстра-сильної фіксації</b> 50 мл</p>
+            <p><b>Гель для волосся екстра-сильної фіксації</b> 50 мл</p>
         </div>
         <div class="plate_styling plate_men">
             <p><b>Засіб для очищення та зволоження обличчя та бороди </b> 150 мл</p>
         </div>
         <div class="plate_styling plate_men">
-            <p><b>Крем пом'якшуючий для гоління </b> 100 мл</p>
+            <p><b>Крем пом'якшуючий для гоління</b> 100 мл</p>
         </div>
         <div class="plate_styling plate_men">
             <p><b>Лосьйон для зміцнення волосся схильного до випадіння</b> 100 мл</p>
