--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -179,14 +179,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>КАК ПРИНИМАТЬ</h2>
-        <div class="change-box">
+<!--         <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">Таблетки</p>
           </div>
           <div>
             <p class="p-btn2">Капли</p>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>В период острого заболевания</h3>
@@ -235,7 +235,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям старше 12 лет и взрослым:</b> По 1 таблетке или по 10 капель каждый час (не более 12 раз в день) до наступления улучшения
+              <b>Детям старше 12 лет и взрослым:</b> По 1 таблетке каждый час (не более 12 раз в день) до наступления улучшения
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -324,7 +324,7 @@
         <a class="buy-btn pill-btn"><p>Где купить</p></a>
       </div>
 
-      <div class="block-5 block-5-2 block-5-disable">
+      <!-- <div class="block-5 block-5-2 block-5-disable">
         <div class="block-5__container">
           <div class="container__subcontainer">
             <h4>При остром заболевании</h4>
@@ -399,7 +399,7 @@
           </div>
 
 
-        </div>
+        </div> -->
 
 
 
