--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <a class="logo"></a>
-    <meta name="description" content="oway"/>
+    <meta name="description" content="lazea"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="shortcut icon" href="./images/" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
@@ -26,8 +26,8 @@
             <a class="where-to-buy-mob" href="#sticker">Де купити</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#1" >ПЕРЕВАГИ</a>
-                <a class="navmenu" href="#3">Як приймати </a>
-                <a class="navmenu" href="#2">Склад та дія </a>
+                <a class="navmenu" href="#3">Склад та дія</a>
+                <a class="navmenu" href="#2">Як приймати</a>
                 <a class="navmenu" href="#4">Поради</a>
                 <a class=" where-to-buy" href="#5">Де купити</a>
                 <!-- <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a> -->
@@ -43,10 +43,10 @@
                             <a class="navmenu menuLi" href="#1" >ПЕРЕВАГИ</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#3">Як приймати </a>
+                            <a class="navmenu menuLi" href="#3">Склад та дія</a>
                         </li>
-                                                <li>
-                            <a class="navmenu menuLi" href="#2">Склад та дія </a>
+                        <li>
+                            <a class="navmenu menuLi" href="#2">Як приймати</a>
                         </li>
                         <li>
                             <a class="navmenu menuLi" href="#4">Поради</a>
@@ -70,41 +70,176 @@
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
-
-      <div class="header-block">
-        <div>
-          <h1>Встигнути все з Вітанго<sup>®</sup></h1>
-          <h3>Збільшує стресостійкість, підвищує енергію</h3>
-        </div>
-        <div class="header-block_img">
-        </div>
-      </div>
 <a name='1'></a>
+	<div class="container-1">
+		<div class="container-1_left">
+			<h1><span>Повернення</span><br><span>до внутрішнього</span><br><span>спокою</span></h1>
+			<p>Німецький лікарський засіб проти тривоги і нервового напруження</p>
+			<div class="container-1_logo"></div>
+		</div>
+		<div class="container-1_right"></div>
+	</div>
 
       <a name='3'></a>
+      <div class="container-2">
+      	<div class="container-2_text">
+      		<p>Вам знайомі такі<br>симптоми тривоги?¹</p>
+      	</div>
+      	<div class="container-2_images">
+      		<div class="container-2_img-container">
+      			<div class="container-2_img"></div>
+      			<p>Нервове напруження, занепокоєння</p>
+      		</div>
+      		<div class="container-2_img-container">
+      			<div class="container-2_img"></div>
+      			<p>Роздратованість, проблеми зі сном</p>
+      		</div>
+      		<div class="container-2_img-container">
+      			<div class="container-2_img"></div>
+      			<p>Прискорене серцебиття, пітливість, регулярні болі</p>
+  			</div>
+  			<div class="container-2_img-container">
+      			<div class="container-2_img"></div>
+      			<p>Важко сконцентруватися</p>
+  			</div>
+      	</div>
+      </div>
 
       <a name='2'></a>
 
+      <div class="container-3">
+      	<div class="container-3_img"></div>
+  		<h2>/ Добре, коли в бурхливості сьогодення знаходиш час для себе /</h2>
+      </div>
+
       <a name='4'></a>
+
+      <div class="container-4">
+      	<p>
+      		Постійна тривога та хвилювання, що не згасають, роблять життя нестерпним. Якщо ваше переживання затягнулося і виходить з-під контролю, це може бути ознакою тривожного стану. Відчуття занепокоєння та страх часто пов’язані з нервовим напруженням, дратівливістю, труднощами з концентрацією уваги чи проблемами зі сном.
+      	</p>
+      	<h3>
+      		5 ПРИЧИН ПРИЙМАТИ Лазея<sup>®</sup>
+      	</h3>
+      	<div class="container-4_num">
+  			<div class="opa-num"></div>
+  			<p>Повертає внутрішній спокій природнім<br> шляхом</p>
+  			<p>Допомагає знизити тривогу і<br> роздратування</p>
+  			<p>Покращує якість сну, заспокоює думки</p>
+  			<p>Не викликає збільшення ваги,<br>сонливості та звикання² </p>
+  			<p>Натуральний склад, німецька якість</p>
+      	</div>
+      </div>
+
 
       <a name='5'></a>
 
-      <div class="container10">
-        <div class="container10-inner">
-          <p><b>Джерела інформації:</b><br>
-1. Kasper S., Dienel A. // Multicenter, open-label, exploratory clinical trial with Rhodiola rosea extract in patients suffering from burnout symptoms // Neuropsychiatric Disease and Treatment 2017: 13 889-898.<br>
-2. Адаптовано з книги Джефа Сазерданда «Scrum. Навчись робити вдвічі більше за менший час».</p>
-        </div>
+      <div class="container-3">
+  		<h2>/ Дозволь собі насолоджуватись життям — це природньо! /</h2>
+      	<div class="container-3_img container-4_img"></div>
+
       </div>
+
+      <div class="container-5">
+      	<div class="container-5_left">
+      		<p>
+      			<span>ЛАЗЕЯ<sup>®</sup></span> — німецький рослинний засіб має антидепресивну та заспокійливу дію завдяки стандартизованому екстракту на основі сілексана, що входить до його складу.
+      		</p>
+      		<div class="container-5_img"></div>
+      	</div>
+      	<div class="container-5_right">
+  			<p>
+  				<span>Silexan<sup>®</sup></span> модулює спеціальні канали надходження кальцію, які беруть участь у виробленні нейромедіаторів³.<br>
+Внаслідок цього, інтенсивність іонів кальцію зменшується і процес роздратування нервових клітин завершується. Тривожні відчуття стають менш вираженими, знижується занепокоєння та покращується стан. 
+  			</p>
+      	</div>
+      </div>
+
+      <div class="container-3">
+      	<div class="container-3_img container-6_img"></div>
+  		<h2>/ Комфортний психологічний
+клімат — відносини без нервів
+та надриву! /</h2>
+      </div>
+
+
+
+
+      <div class="container-4">
+      	<p>
+      		Нервове збудження і хвилювання виникають, коли не вдається впоратися з проблемою або напередодні важливої події. Спокій та рівновага допоможуть зосередитися на головному і знайти вихід навіть у складній життєвій ситуації.
+      	</p>
+      	<h3>
+      		ЯК ПРИЙМАТИ Лазея<sup>®</sup>
+      	</h3>
+      	<div class="container-7">
+      	<div class="container-7_images">
+      		<div class="container-7_img-container">
+      			<div class="container-7_img"></div>
+      			<p>Дорослим та дітям від 12 років</p>
+      		</div>
+      		<div class="container-7_img-container">
+      			<div class="container-7_img"></div>
+      			<p>По 1 капсулі на день</p>
+      		</div>
+      		<div class="container-7_img-container">
+      			<div class="container-7_img"></div>
+      			<p>Запивати достатньої кількістю води</p>
+  			</div>
+  			<div class="container-7_img-container">
+      			<div class="container-7_img"></div>
+      			<p>Тривалість застосування визначається індивідуально</p>
+  			</div>
+      	</div>
+      	</div>
+      </div>
+
+      <div class="container-8">
+      	<div class="container-8_inner">
+      		<h3>
+      			Як запобігти тривозі?⁴
+      		</h3>
+      		<div class="container-8_text">
+      			<p>Відмова від шкідливих звичок позитивно впливає на зниження тривожних симптомів.</p>
+      			<p>Фізичні навантаження знижують стрес та покращують сон.</p>
+      			<p>Кофеїнові напої збільшують тривожність, не варто зловживати кавою чи міцним чаєм. </p>
+      			<p>Вчасний прийом їжі та відпочинок допоможуть відновити сили.</p>
+      			<p>Краще обмежити спілкування із токсичними людьми. Комунікація повинна приносити радість. </p>
+      			<p>Добре мати хобі. Справа до душі підбадьорює, допомагає залишатися спокійним та врівноваженим.</p>
+      		</div>
+      		
+      	</div>
+      </div>
+
+      <div class="container-9">
+      	<h3>
+      		ДЕ МОЖНА ПРИДБАТИ ЛАЗЕЯ<sup>®</sup>
+      	</h3>
+
+      </div>
+
+      <div class="container-10">
+      	<p>
+      		<span>Джерела інформації:</span>
+1. Адаптовано з https://www.webmd.com/.<br> 
+2. Kasper S et al. No withdrawal symptoms after discontinuation of Silexan. Poster presented at the annual congress of the German Association for Psychiatry and Psychotherapy (DGPPN), Berlin, Germany, 2011; Kasper S et al. Silexan for anxiety disorders and related conditions. Psychopharmakotherapie 2015;22:15–24. <br>
+3. Müller WE, Schuwald A, Nöldner M, Kasper S, Friedland K. Pharmakologische Grundlagen der therapeutischen Anwendung von Silexan (Lasea®). Psychopharmakotherapie 2015; 22: 3-13. <br>
+4. Адаптовано з https://moz.gov.ua 
+      	</p>
+      </div>
+
+
+
+
+
       <div class="vita-footer">
         <div class="vita-footer_inner">
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                      Вітанго® Р.П. МОЗ України UA/14378/01/01 від 08.05.2015. Реклама лікарського засобу. Відпускається без рецепта. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря. Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції. 
-                        Виробник: Dr. Willmar Schwabe GmbH & Co. KG (Німеччина) <br>
+                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Має протипоказання та побічні реакції. Лазея® капсули, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/14558/01/01 від 19.08.2015.<br>Виробник: Dr. Willmar Schwabe GmbH & Co. KG (Німеччина)  <br>
 
-                     <br>Ексклюзивний дистриб’ютор в Україні ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua. Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Вітанго® будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+<br>Ексклюзивний дистриб’ютор в Україні ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075, тел.: (044) 401–81–03, www.naturpharm.ua. Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Лазея®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
 
                   </div>
                   <div class="logo2"></div>
