--- a/Lazea-new/index.html
+++ b/Lazea-new/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="./images/" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
-<!--    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>-->
-<!--    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 </head>
 <body>
 
@@ -70,7 +70,6 @@
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
-<a name='1'></a>
 	<div class="container-1">
 		<div class="container-1_left">
 			<h1><span>Повернення</span><br><span>до внутрішнього</span><br><span>спокою</span></h1>
@@ -79,8 +78,13 @@
 		</div>
 		<div class="container-1_right"></div>
 	</div>
+	<div class="container-1_mob">
+		<div class="container-1_mob-img"></div>
+		<h1><span>Повернення</span><br><span>до внутрішнього</span><br><span>спокою</span></h1>
+		<div class="container-1_logo"></div>
+		<p>Німецький лікарський засіб проти тривоги і нервового напруження</p>
+	</div>
 
-      <a name='3'></a>
       <div class="container-2">
       	<div class="container-2_text">
       		<p>Вам знайомі такі<br>симптоми тривоги?¹</p>
@@ -105,14 +109,13 @@
       	</div>
       </div>
 
-      <a name='2'></a>
 
       <div class="container-3">
       	<div class="container-3_img"></div>
   		<h2>/ Добре, коли в бурхливості сьогодення знаходиш час для себе /</h2>
       </div>
 
-      <a name='4'></a>
+	<a name='1'></a>
 
       <div class="container-4">
       	<p>
@@ -139,6 +142,7 @@
       	<div class="container-3_img container-4_img"></div>
 
       </div>
+	<a name='3'></a>
 
       <div class="container-5">
       	<div class="container-5_left">
@@ -162,6 +166,7 @@
 та надриву! /</h2>
       </div>
 
+	<a name='2'></a>
 
 
 
@@ -193,6 +198,7 @@
       	</div>
       	</div>
       </div>
+	<a name='4'></a>
 
       <div class="container-8">
       	<div class="container-8_inner">
@@ -215,7 +221,7 @@
       	<h3>
       		ДЕ МОЖНА ПРИДБАТИ ЛАЗЕЯ<sup>®</sup>
       	</h3>
-
+<!--		  <div id="comp_wgt" data-drug="331746,331750" data-lang="ru" data-url="https://compendium.com.ua/info/255157/lazeja/" data-proj="лазея" style="border-color: #009055; margin-bottom: 60px; width: 100%;"><div class="title" style="background: #009055;"><a href="https://compendium.com.ua/info/255157/lazeja/" title="лазея, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>-->
       </div>
 
       <div class="container-10">
@@ -227,11 +233,6 @@
 4. Адаптовано з https://moz.gov.ua 
       	</p>
       </div>
-
-
-
-
-
       <div class="vita-footer">
         <div class="vita-footer_inner">
             <div class="vft">
