--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 			<a href="Klimaktoplan-LT/index.html">Klimaktoplan-lt</a>
 			<a href="Vitango-new/index.html">Vitango-new</a>
 			<a href="Cinnabsin-AZ/index.html">Cinnabsin-AZ</a>
+			<a href="Lazea-new/index.html">laSea-new</a>
+
 		</section>
 	</main>
 
@@ -279,6 +281,9 @@
 	}
 	a:nth-child(59)::before {
 		background: url("./Cinnabsin-AZ/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(60)::before {
+		background: url("./Lazea-new/logo.svg")no-repeat center / contain;
 	}
 </style>
 
