--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -102,7 +102,7 @@
           <div class="product-bottle"></div>
         </div>
         <div class="product-tagline">
-          <p>Alpikol. Moć prirodnih sastojaka!​</p>
+          <p>ALPIKOL – MOĆ PRIRODNIH SASTOJAKA!​​</p>
         </div>
       </div>
     </div>
@@ -112,9 +112,9 @@
       <div class="block-2__content">
         <h3>
 
-          Primena Alpikol sirupa posebno se preporučuje kod dece i odraslih tokom jeseni i zime, u sezoni gripa, prehlada i drugih virusnih infekcija disajnih puteva, kada je potrebno dodatno zaštititi organizam.
+          Primena Alpikol sirupa posebno se preporučuje kod dece i odraslih tokom jeseni i zime, u sezoni gripa, prehlada i drugih virusnih infekcija disajnih puteva, kada je potrebno dodatno zaštititi organizam.
         </h3>
-        <p>Alpikol sirup je dijetetski suplement koji sadrži standardizovane biljne  ekstrakte južnoafričke muškatle i crne zove uz dodatak beta glukana. </p>
+        <p>Alpikol sirup je dijetetski suplement koji sadrži standardizovane biljne  ekstrakte južnoafričke muškatle i crne zove uz dodatak beta glukana.</p>
         <p>Ova moćna kombinacija predstavlja prirodnu podršku imunitetu, pojačava otpornost organizma i blagotvorno deluje u očuvanju zdravlja disajnih puteva.</p>
       </div>
       <h3>ALPIKOL – pametan izbor u sezoni virusnih infekcija disajnih puteva​</h3>
@@ -125,9 +125,9 @@
       <div class="block-3__container">
         <div class="block-3__container-img"></div>
         <div class="block-3__container-content">
-          <h4>Dete pohadja vrtić i često je bolesno?</h4>
+          <h4>Dete pohađa vrtić i često je bolesno?</h4>
           <p>
-            Iako su djeca predškolskog uzrasta veća i otpornija još uvijek se često razbolijevaju obzirom da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup, zahvaljući svojem prirodnom sastavu pomaže otpornosti organizma na viruse.
+            Iako su deca predškolskog uzrasta veća i otpornija još uvek se često razboljevaju obzirom da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup, zahvaljujući svom prirodnom sastavu pomaže otpornosti organizma na viruse.
           </p>
 <!--          //////-->
           <div class="panel">
@@ -142,7 +142,7 @@
         <div class="block-3__container-content">
           <h4>Hladno je i svi oko Vas izgledaju bolesno?​</h4>
           <p>
-            Sa prvim hladnim danima u javnom prevozu, prodavnicama, na poslu čuje se kijanje i kašljanje. Alpikol sirup će pojačati otpornost Vašeg organizma na viruse koji su najaktivniji zimi.
+            Sa prvim hladnim danima u javnom prevozu, prodavnicama, na poslu, čuje se kijanje i kašljanje. Alpikol sirup će pojačati otpornost Vašeg organizma na viruse koji su najaktivniji zimi.
           </p>
           <!--          //////-->
           <div class="panel">
@@ -157,12 +157,11 @@
         <div class="block-3__container-content">
           <h4>Upotreba antibiotika kod Vašeg deteta je česta pojava?​</h4>
           <p>
-            Neka djeca su često bolesna i dešava se da su periodi izmedju dve prehlade samo nekoliko dana. To ukazuje da su osetljivija,
+            Neka deca se često razboljevaju i dešava se da period između dve prehlade traje samo nekoliko dana.
           </p>
           <!--          //////-->
           <div class="panel">
-            <p>Neka deca se često razboljevaju i dešava se da su periodi izmedju dve prehlade samo nekoliko dana. To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup, zahvaljući svom prirodnom sastavu pomaže organizmu u lakšem i brzem ozdravljenju.
-              Njegovi prirodni sastojci – plod crne zove, koren južnoafričke muškatle i beta glukan Yestimun<sup>®</sup> zajedno pomažu boljoj otpornosti dečjeg organizma i jačaju imuni sistem. Dok su u kolektivu, naša deca su izložena velikom broju virusa i bakterija koji vrebaju dečiji organizam.</p>
+            <p>Neka deca se često razboljevaju i dešava se da period između dve prehlade traje samo nekoliko dana. To ukazuje da su osetljivija, a moguće je i da njihov imuni sistem nije u potpunosti razvijen. Alpikol sirup zahvaljujući svom prirodnom sastavu pomaže organizmu u lakšem i bržem ozdravljenju.</p>
           </div>
           <button class="accordion"> Saznajte više​</button>
           <!--          //////-->
@@ -173,7 +172,7 @@
         <div class="block-3__container-content">
           <h4>Upravo su krenuli simptomi prehlade ili gripa?​</h4>
           <p>
-            Povišena temperatura, groznica, suvi kašalj, zapušen nos ili obilno curenje iz nosa su prvi simptomi virusnih infekcija disajnih puteva. Mogu da se jave u bilo koje doba godine, kod bilo koje osobe: predškolaca, školaraca, odraslih ili starih osoba. Alpikol sirup, zahvaljući svom prirodnom sastavu pojačaće otpornost organizma i ojačati imunitet tokom bolesti. Uz Alpikol sirup bolest kraće traje.
+            Povišena temperatura, groznica, suvi kašalj, zapušen nos ili obilno curenje iz nosa su prvi simptomi virusnih infekcija disajnih puteva. Mogu da se jave u bilo koje doba godine, kod bilo koje osobe: predškolaca, školaraca, odraslih ili starih osoba. Alpikol sirup zahvaljući svom prirodnom sastavu pojačaće otpornost organizma i ojačati imunitet tokom bolesti. Uz Alpikol sirup bolest kraće traje.
           </p>
           <!--          //////-->
           <div class="panel">
@@ -203,7 +202,7 @@
         <div class="block-3__container-content">
           <h4>Studentima, đacima i svima koji puno sede neophodna je posebna zaštita tokom zimskih dana.​</h4>
           <p>
-            Za uspešno i brzo učenje potrebno je puno energije koje može da pruži samo zdrav organizam. Alpikol sirup sadrži ekstrakt ploda crne zove, bogat antioksidansima, poznatim čuvarima zdravlja u borbi protiv slobodnih radikala.​
+            Za uspešno i brzo učenje potrebno je puno energije koju može da pruži samo zdrav organizam. Alpikol sirup sadrži ekstrakt ploda crne zove, bogat antioksidansima, poznatim čuvarima zdravlja u borbi protiv slobodnih radikala.​
           </p>
           <!--          //////-->
           <div class="panel">
@@ -254,11 +253,11 @@
             <div class="block-5__container-content">
                 <h3>NAČIN KORIŠĆENJA</h3>
                     <div class="container-content">
-                        <h4>Deca od 6 do 12 godina:</h4>
+                        <h4>Deca od 3 do 6 godina uz konsultaciju sa pedijatrom i deca od 6 do 12 godina:</h4>
                         <div class="subcontent">
                             <div class="subcontent-img"></div>
                             <div>
-                                <p>5 ml 2 puta na dan</p>
+                                <p>5 ml (jedna kafena kašika) jednom dnevno​</p>
                             </div>
                         </div>
                     </div>
@@ -267,7 +266,7 @@
                         <div class="subcontent">
                             <div class="subcontent-img"></div>
                             <div>
-                                <p>15 ml na dan​</p>
+                                <p>10 ml (dve kafene kašike) jednom dnevno​</p>
                             </div>
                         </div>
                     </div>
@@ -275,9 +274,9 @@
         </div>
         <p class="block-5__bottom-content">​
 
-Pre upotrebe promućkati! <br>Prepručena dnevna doza se ne sme prekoračiti. Dodaci ishrani se ne mogu koristiti kao zamena za raznovrsnu ishranu. Čuvati van domašaja dece. <br>Nije namenjeno trudnicama, doiljama, deci ispod 3 godine. Proizvod ne smeju da koriste osobe preosteljive na bilo koji sastojak, osobe sa oboljenjima jetre ili povećanim rizikom od krvarenja. U slučaju preosetljivosti ili neželjenih reakcija potrebno je prekinuti sa uzimanjem i javiti se lekaru. <br>Ne preporučuje se uzimanje duže od 2 nedelje u kontinuitetu.​
-Nakon otvaranja bočicu čuvati u frižideru ne duže od 2 nedelje.​
-Bez konzervansa, bez veštačkih boja i aroma.​
+Pre upotrebe promućkati! <br>Preporučena dnevna doza se ne sme prekoračiti. Dodaci ishrani se ne mogu koristiti kao zamena za raznovrsnu ishranu. Čuvati van domašaja dece. <br>Nije namenjeno trudnicama, dojiljama, deci ispod 3 godine. Proizvod ne smeju da koriste osobe preosteljive na bilo koji sastojak, osobe sa oboljenjima jetre ili povećanim rizikom od krvarenja. U slučaju preosetljivosti ili neželjenih reakcija potrebno je prekinuti sa uzimanjem i javiti se lekaru. <br>Ne preporučuje se uzimanje duže od 2 nedelje u kontinuitetu.​
+Nakon otvaranja bočicu čuvati u frižideru ne duže od 2 nedelje.​
+Bez konzervansa, bez veštačkih boja i aroma.
           <a name="map"></a>
         </p>
 
@@ -289,7 +288,7 @@ Bez konzervansa, bez veštačkih boja i aroma.​
     <map>
       <h3 class="translated-text" key="buy-text">GDE KUPITI​</h3>
       <h3>
-        Alpikol sirup se može direktno kupiti u svim bolje snabdevenim apotekama i njihovim on line apotekama.​
+        Alpikol sirup se može direktno kupiti u svim bolje snabdevenim apotekama i njihovim online apotekama.​
       </h3>
       <div class="map-content">
       	<a class="source source-6" href="https://www.apotekanet.rs/alpikol-imuno-sirup-120ml"></a>
@@ -313,7 +312,7 @@ Bez konzervansa, bez veštačkih boja i aroma.​
       <b>
         Alpikol sirup je dijetetski suplement. Čuvati van domašaja dece. Preporučena dnevna doza se ne sme prekoračiti. Dodaci ishrani se ne mogu koristiti kao zamena za raznovrsnu ishranu.
       </b>
-      <p>Alpikol sirup<br>Proizvedeno u E.U. za: Alpen Pharma AG Bern, Švajcarska<br>Za Srbiju: Alpen Pharma d.o.o., Ulcinjska 13, 11 050 Beograd <br>email: office@alpenpharma.rs<br>www.alpenpharma.com
+      <p>Alpikol sirup<br>Proizvedeno u EU za: Alpen Pharma AG Bern, Švajcarska<br>Za Srbiju: Alpen Pharma d.o.o., Ulcinjska 13, 11 050 Beograd <br>email: office@alpenpharma.rs<br>www.alpenpharma.com
     </div>
 
   </body>
